BUG inside restoreState: Object[].length is 2! Generics Cosmetics
Signed-off-by: pizzi80 <paolo@given2.com>